# AegisDx

./: .gitignore  README.md  render.yaml
.github/workflows/: pages.yml
api/: pyproject.toml  server.py
conf/prod/: README.md  docker-compose.yml  dockerfile.api
engine/: .gitignore  readme.md  workflow.py
engine/agents/: __init__.py  action.py  aggregate.py  diagnosis.py  reasoning.py  verification.py  warning.py
engine/data/: symptom-diag.json
engine/llm_provider/generic/: base.py
engine/retrievers/: __init__.py  pubmed_client.py  search_pubmed.py  search_pubmed_bk.py
engine/utils/: llm.py  new_utils.py  utils.py  verify_agent.py
legacy/: README.md  __init__.py  dotenv.tpl  llm.py  pipeline.py  pyproject.toml  server.py
legacy/agents/: __init__.py  action.py  aggregate.py  diagnosis.py  reasoning.py  warning.py
legacy/retrievers/: __init__.py  pubmed_client.py  pubmed_retriever.py
legacy/scripts/: run_server.sh
web/: dotenv.tpl  index.html  vite.config.ts
web/src/: Backend.ts
web/src/components/: CaseInputArea.vue
web/src/models/: Samples.ts
web/src/pages/: Analyze.vue  Home.vue  Login.vue  Signup.vue
