[project]
name = "api"
version = "0.1.0"
description = "AI Agent-based diagnostic service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "biopython>=1.87",
    "colorama>=0.4.6",
    "fastapi>=0.119.1",
    "json-repair>=0.61.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "logfire>=4.14.1",
    "loguru>=0.7.3",
    "openai>=2.6.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai>=1.3.0",
    "pydantic-graph>=0.1.0",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.0",
    "redis>=7.0.0",
    "rq>=2.6.0",
    "smolagents[toolkit]>=1.22.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "sse-starlette>=3.0.2",
    "supabase>=2.23.3",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
