[project]
name = "aegisdx"
version = "0.1.0"
description = "AegisDx — agent-based diagnostic reasoning service, the inference backend for opendx."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "json-repair>=0.30.0",
    "loguru>=0.7.0",
    "colorama>=0.4.6",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "biopython>=1.83",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.2.0"]
ollama = ["langchain-ollama>=0.2.0"]

[project.scripts]
aegisdx-server = "aegisdx.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegisdx"]
